ci(pages): deploy on pushes to main and sandbox; allow manual dispatch

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -2,7 +2,8 @@ name: Deploy to GitHub Pages (sandbox)
 
 on:
   push:
-    branches: [ sandbox ]
+    branches: [ sandbox, main ]
+  workflow_dispatch:
 
 permissions:
   contents: read
